Bug 362074 - In Krita 3.0 alpha, Shortcut Setting dialogue should have the Action trees expanded by default
Summary: In Krita 3.0 alpha, Shortcut Setting dialogue should have the Action trees ex...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.0 Alpha
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-22 09:30 UTC by Tyson Tan
Modified: 2016-05-03 12:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krita 3.0 alpha shortcut settings not expanding upon search (54.61 KB, image/png)
2016-04-22 09:32 UTC, Tyson Tan
Details
Krita 3.0 alpha shortcut settings desired result after keyword search (60.40 KB, image/png)
2016-04-22 09:33 UTC, Tyson Tan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2016-04-22 09:30:09 UTC
In Krita 3.0 alpha, Settings>Configure Krita>Keyboard Shortcuts dialogue now displays Action tree as collapsed by default. This is not intuitive because when a user searches a keyword, he can only see the menus that include such actions, but the actual actions are hidden. Not everybody knows how to click and expand the action tree, so people might fail to customize their shortcuts.

I suggest we keep the action tree expanded always, so that when we search, we can see every action that hits.

Reproducible: Always
Comment 1 Tyson Tan 2016-04-22 09:32:45 UTC
Created attachment 98509 [details]
Krita 3.0 alpha shortcut settings not expanding upon search
Comment 2 Tyson Tan 2016-04-22 09:33:42 UTC
Created attachment 98510 [details]
Krita 3.0 alpha shortcut settings desired result after keyword search
Comment 3 Michael 2016-04-26 02:29:47 UTC
This should be enabled by:

https://phabricator.kde.org/rKRITA7498d7d2b82bf73a22846f62ca63f3c7c05149b5
Comment 4 Tyson Tan 2016-04-26 09:03:02 UTC
OK. Thank you Michael!
Comment 5 Dmitry Kazakov 2016-05-03 12:55:01 UTC
Seems to be fixed now! :)