Expand shortcut list tree when searching shortcuts

This makes searching more intuitive. The shortcut view will reset when
the search area is cleared.

Maniphest Tasks: T1244
BUG: 362074